--- a/Verificación de Usuario.html
+++ b/Verificación de Usuario.html
@@ -32,34 +32,24 @@
     </header>
     <main>
         <section class="section-user qvboxmodel box-vmax">
-            <div class="box-darkened container-full text-center text-white no-margin-top">
+            <div class="box-darkened overflow-auto text-center text-white no-margin-top">
                 <article class="containexr-full container no-margin-top no-margin-bottom text-shadow-black medium-big-text text-600 caviar-dreams italic text-center no-padding-bottom">
                     <p class="section-1__text text-shadow-black">La capacitación de los empleados es de suma importancia, ya que de allí surge el éxito, eficacia y eficiencia de una empresa</p>
                 </article>
-                <div class="descriptive__header form__container no-padding-top">
-                    <div class="form container text-black">
-                        <span class="logo block container-full"    tabindex="1">
-                            <img src="/assets/Logo/pngwing.com.png" alt="LogoTipo">
-                        </span>
-                        <h2 class="caviar-dreams text-600">Inicio de Sesión</h2>
-                        <p>Aún no tienes una cuenta? <a href="">Ingresa Aquí</a></p>
-                        <form action="">
-                            <div>
-                                <div class="box">
-                                    <input id="User" type="text" class="form__input box monserrat medium-text" placeholder=" ">
-                                    <label for="User" class="form__label caviar-dreams medium-text">Usuario</label>
-                                    <div class="form__line"></div>  
-                                </div>
-                                <div class="box">
-                                    <input id="Password" type="password" class="form__input box monserrat medium-text" placeholder=" ">
-                                    <label for="Password" class="form__label caviar-dreams medium-text">Contraseña</label>
-                                    <div class="form__line"></div> 
-                                </div>
-                            </div>
-                            <button class="btn btn--fill-out-orange form__btn btn--border-orange text-orange text-shadow-white no-margin-bottom no-margin-top caviar-dreams text-600">Iniciar Sesión</button>
-                            <a class="btn btn--fill-out-orange form__btn btn--border-orange text-orange text-shadow-white no-margin-bottom no-margin-top caviar-dreams text-600">Crear Cuenta</a>
-                        </form>
-                    </div>
+                <div class="form__box">
+                    <form action="" method="POST" id="form" class="caviar-dreams text-600">
+                        <h1 class="big-text">Inicio de Sesión</h1>
+                        <p class="inline-block text-300 medium-text">No tienes una cuenta?</p><a class="text-300 nav-menu__a" href=""> Registrate aquí</a>
+                        <div class="form__inputs">
+                            <input type="text" name="user" id="user" required><span class="inputs__bar text-gray"></span>
+                            <label for="user">Usuario</label>
+                        </div>
+                        <div class="form__inputs">
+                            <input type="password" name="password" id="password" required><span class="inputs__bar "></span>
+                            <label for="password">Contraseña</label>
+                        </div>
+                        <button class="form__btn btn btn--fill-out-orange btn--border-orange bg-white">Iniciar Sesión</button>
+                    </form>
                 </div>
             </div>
         </section>
