No recuerdo que hice, pero es algo bonito

--- a/Documentacion.html
+++ b/Documentacion.html
@@ -21,7 +21,7 @@
                     <li class="nav-menu__li"><a href="/Foro.html" class="nav-menu__a">Foro</a></li>
                     <li class="nav-menu__li nav-menu__li--actual"><a href="./Documentacion.html" class="nav-menu__a nav-menu__a--actual">Documentación</a></li>
                     <li class="nav-menu__li"><a href="." class="nav-menu__a">Capacitación</a></li>
-                    <li class="nav-menu__li"><a href="/Verificación de Usuario.html" class="nav-menu__a">Usuario</a></li>
+                    <li class="nav-menu__li"><a href="/Login.html" class="nav-menu__a">Usuario</a></li>
                 </ul>
             </nav>
         </div>
