--- a/Foro.html
+++ b/Foro.html
@@ -24,7 +24,7 @@
                     <li class="nav-menu__li  nav-menu__li--actual" tabindex="3"><a href="/Foro.html" class="nav-menu__a  nav-menu__a--actual">Foro</a></li>
                     <li class="nav-menu__li" tabindex="4"><a href="/Documentacion.html" class="nav-menu__a">Documentación</a></li>
                     <li class="nav-menu__li" tabindex="5"><a href="." class="nav-menu__a">Capacitación</a></li>
-                    <li class="nav-menu__li" tabindex="6"><a href="/Verificación de Usuario.html" class="nav-menu__a">Usuario</a></li>
+                    <li class="nav-menu__li" tabindex="6"><a href="/Login.html" class="nav-menu__a">Usuario</a></li>
                 </ul>
             </nav>
         </div>
