--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="nav-menu">
         <div class="nav-menu__container">
             <div class="nav-menu__logo">
-                <a href="#Principle" class="logo" tabindex="1">
+                <a href="/pruebas.html" class="logo" tabindex="1">
                     <img src="/assets/Logo/pngwing.com.png" alt="LogoTipo">
                 </a>
             </div>
@@ -24,7 +24,7 @@
                     <li class="nav-menu__li" tabindex="3"><a href="/Foro.html" class="nav-menu__a">Foro</a></li>
                     <li class="nav-menu__li" tabindex="4"><a href="/Documentacion.html" class="nav-menu__a">Documentación</a></li>
                     <li class="nav-menu__li" tabindex="5"><a href="." class="nav-menu__a">Capacitación</a></li>
-                    <li class="nav-menu__li" tabindex="6"><a href="/Verificación de Usuario.html" class="nav-menu__a">Usuario</a></li>
+                    <li class="nav-menu__li" tabindex="6"><a href="/Login.html" class="nav-menu__a">Usuario</a></li>
                 </ul>
             </nav>
         </div>
@@ -47,7 +47,7 @@
                 <div class="descriptive__center">
                     <h2 class="montserrat big-text">Electrimulator</h2>
                     <p class="text-gray text-400 medium-text">El electrimulator es un sistema basado en el diseño y funcionalidad de los videojuegos, encargado de simular problemáticas del ambiente laboral en el sector de la energía eléctrica permitiendo su resolución mediante diferentes técnicas.</p>
-                    <a href="#Goals" class="descriptive__btn btn btn--border-orange text-orange btn--fill-out-orange text-shadow-white" tabindex="24">Leer Más</a>
+                    <a href="#Goals" class="descriptive__btn btn btn--border-color1 text-color1 btn--fill-out-color1 text-shadow-white" tabindex="24">Leer Más</a>
                 </div>
             </header>
             <div class="descriptive descriptive__main inline-block">
@@ -74,12 +74,12 @@
             </div>
         </article>
         <hr id="Goals">
-        <article class="box container-full bg-orange text-center box-darkened">
-            <section class="container descriptive2 bg-blue inline-block">
+        <article class="box container-full bg-color1 text-center box-darkened">
+            <section class="container descriptive2 bg-color2 inline-block">
             </section>
-            <section class="container descriptive2 bg-blue inline-block">
+            <section class="container descriptive2 bg-color2 inline-block">
             </section>
-            <section class="container descriptive2 bg-blue inline-block">
+            <section class="container descriptive2 bg-color2 inline-block">
             </section>
         </article>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque odio pariatur repellendus velit dolor tempore accusamus assumenda rem cumque, quidem autem dolorem error animi quibusdam tempora totam ducimus eaque eos explicabo. Nobis tenetur perspiciatis omnis, cupiditate error, iste repellat itaque recusandae voluptate molestias suscipit ratione quasi! Enim eligendi quia maiores reiciendis, doloremque ad nulla facilis aliquid dolorum. Neque dolorum voluptates consectetur laborum laboriosam ipsam modi aspernatur molestias, fugit tenetur est repudiandae, voluptate quia nostrum perferendis nam libero eligendi et veniam, quod sunt saepe optio pariatur aliquid? Id incidunt sunt dolore perspiciatis earum ipsum molestias? Sapiente accusamus odit ea beatae perferendis consequatur ratione laboriosam, natus nobis eaque vitae minima praesentium unde, iure aliquam saepe molestias at corrupti possimus? Hic cupiditate reiciendis doloremque nostrum repudiandae minima corporis labore laborum cumque, architecto quam! Iure consequuntur tempora assumenda recusandae ea atque dignissimos et inventore adipisci, in facere, illo veritatis pariatur autem ducimus, minima dolor!</p>
