--- a/Login.html
+++ b/Login.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/css/index.css">
     <link rel="stylesheet" href="/css/user.css">
 </head>
-<body class="container-full">
+<body class="section-user ">
     <header class="nav-menu">
         <div class="nav-menu__container">
             <div class="nav-menu__logo">
@@ -31,27 +31,27 @@
         </div>
     </header>
     <main>
-        <section class="section-user qvboxmodel box-vmax">
-            <div class="box-darkened overflow-auto text-center text-white no-margin-top">
-                <article class="containexr-full container no-margin-top no-margin-bottom text-shadow-black medium-big-text text-600 caviar-dreams italic text-center no-padding-bottom">
-                    <p class="section-1__text text-shadow-black">La capacitación de los empleados es de suma importancia, ya que de allí surge el éxito, eficacia y eficiencia de una empresa</p>
-                </article>
-                <div class="form__box">
-                    <form action="" method="POST" id="form" class="caviar-dreams text-600">
+        <section class="qvboxmodel">
+            <div class="box-darkened text-center text-white no-margin-top">
+                <div class="form__box login">
+                    <form action="" method="POST" id="form" class="form caviar-dreams text-600">
                         <h1 class="big-text">Inicio de Sesión</h1>
-                        <p class="inline-block text-300 medium-text">No tienes una cuenta?</p><a class="text-300 nav-menu__a" href=""> Registrate aquí</a>
+                        <p class="inline-block text-300 medium-text">¿No tienes una cuenta?</p><a class="text-300 nav-menu__a" href="/Register.html"> Registrate aquí</a>
                         <div class="form__inputs">
-                            <input type="text" name="user" id="user" required><span class="inputs__bar text-gray"></span>
+                            <input type="text" name="user" placeholder=" " id="user" class="montserrat text-black" required><span class="inputs__bar"></span>
                             <label for="user">Usuario</label>
                         </div>
                         <div class="form__inputs">
-                            <input type="password" name="password" id="password" required><span class="inputs__bar "></span>
+                            <input type="password" name="password" placeholder=" " id="password" class="montserrat text-black" required><span class="inputs__bar "></span>
                             <label for="password">Contraseña</label>
                         </div>
-                        <button class="form__btn btn btn--fill-out-orange btn--border-orange bg-white">Iniciar Sesión</button>
+                        <button class="form__btn btn btn--fill-out-color1 btn--border-color1 bg-white">Iniciar Sesión</button>
                     </form>
                 </div>
             </div>
         </section>
     </main>
+    <footer>
+        <a href="https://www.flaticon.es/iconos-gratis/historia" title="historia iconos" target="_blank">Historia iconos creados por Pixelmeetup - Flaticon</a>
+    </footer>
 </body>
